# PlaySK-Piano-Roll-Reader

./: .gitignore  3rd-party-license.txt  LICENSE.md  MyReader.sln  PlaySK Piano Roll Reader.sln  PostBuildEvent.bat  README.md  build.bat  build_mac.sh  build_mac.spec  build_mac_arm.sh  build_mac_arm.spec  build_mac_x64.sh  build_mac_x64.spec  build_win.bat  build_win.spec  main.spec  notarize_mac.sh  pyproject.toml  requirements.txt
ConfigFile/: 88-Note.txt  Ampico_A.txt  Duo-Art.txt  Setting.ini  Setting.json
MyReader/: AmpicoA.h  DuoArt.cpp  MyReader.cpp  MyReader.h  MyReader.rc  MyReader.vcxproj  MyReader.vcxproj.filters  Player.h  README.md  mycv.cpp  mycv.h  resource.h  stdafx.h
OpenCV_248_Libs/: Readme.txt
Source/: AmpicoA.cpp  AmpicoA.h  DuoArt.cpp  DuoArt.h  MyReader.rc  MyReader.vcxproj  MyReader.vcxproj.filters  Player.cpp  Player.h  json11.cpp  main.cpp  main.h  mycv.cpp
assets/: Aeolian 176-note MIDI setting.html  Aeolian_176note_MIDI_setting.html  dmg-bg.tiff
config/: 88Note black background.json  88Note white background.json  88Note.json  88Note_dark_hole.json  88Note_light_hole.json  88_tracker.json  Ampico A black background.json  Ampico A white background.json  AmpicoA_Scanned_tracker.json  AmpicoA_tracker.json  Ampico_A.json  Ampico_A_scan_darkhole.json  Ampico_A_scan_lighthole.json  Duo-Art black background.json  Duo-Art white background.json  Duo-Art.json  Duo-Art_Scanned_tracker.json  Duo-Art_Scanned_tracker_recut.json  Duo-Art_scan_darkhole.json  Duo-Art_scan_lighthole.json  Duo-Art_tracker.json
docs/: dmg-bg.tiff
sample_scans/: Aeolian 176-note 3604 Pagan Love Song.CIS  Ampico A 60641 Hopak.CIS  Ampico A 65003 The Whistler And His Dog.CIS  Ampico A 66923 T' Jours A Moi.CIS  Ampico B 2551 If God Left Only You.CIS  Duo-Art 6064 The Swan.CIS  Duo-Art 69349 Red Mill Selections .CIS  Duo-Art 71399 Prince of Pilsen Selections .CIS  Recordo B 94909 Now's The Time To Fall In Love.CIS  Welte Licensee 6154 I Ain't Nobody's Darling.CIS  Welte Licensee 7005 Etude Japonaise.CIS  _Scan images are from Terry Symthe's free library.txt
src/: AmpicoA.cpp  AmpicoA.h  AmpicoB.py  Artecho.py  DuoArt.cpp  DuoArt.h  DuoArt.py  InputScanImg.cpp  InputScanImg.h  InputVideo.cpp  InputVideo.h  InputWebcam.cpp  InputWebcam.h  MyReader.rc  MyReader.vcxproj  MyReader.vcxproj.filters  PhilippsDuca.py  Player.cpp  Player.h  Recordo.py  RecordoA.py  RecordoB.py  Resource.h  WelteLicensee.py  WelteT100.py  WelteT98.py  build_mac.spec  cis_decoder.py  cis_image.py  cis_set_edge.py  config.py  controls.py  cvhelper.cpp  cvhelper.h  input_editor.py  input_src.py  input_src2.py  input_src_new.py  main.cpp  main.h  (+14 more)
test/: aging_launch.py  aging_play.py  aging_test.py  launch_test.py  test_AmpicoA.py  test_AmpicoB.py  test_Artecho.py  test_DuoArt.py  test_Recordo.py  test_RecordoA.py  test_RecordoB.py  test_Themodist.py  (+13 more)
(+89 files in other folders)
