[tool.poetry]
name = "PlaySK-Piano-Roll-Reader"
version = "3.5.1"
description = "Optically reading a piano roll image, emulates expression and output midi signal in real-time."
authors = ["nai-kon <fxtch686@yahoo.co.jp>"]
readme = "README.md"
repository =  "https://github.com/nai-kon/PlaySK-Piano-Roll-Reader"

[tool.poetry.dependencies]
python = "~3.11"
wxpython = "^4.2.1"
python-rtmidi = "^1.5.6"
opencv-python-headless = "^4.8.0.76"
numpy = "^1.26.0"
mido = "^1.3.0"
cython = "^3.0.2"
pydantic = "^2.6.4"
certifi = "^2024.2.2"

[tool.poetry.group.dev.dependencies]
pyinstaller = "6.1.0"
pip-licenses = "^4.3.3"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
ruff = "^0.1.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F", "B", "I", "COM", "A", "UP", "Q", "SIM", "W"]
ignore = [
    "E402",
    "E501",
    "SIM300",
    "UP008"
]