[project]
name = "PlaySK-Piano-Roll-Reader"
version = "3.7.1"
description = "Optically reading a piano roll image, emulates expression and output midi signal in real-time."
authors = [{ name = "Katz Sasaki" }]
requires-python = ">=3.11,<3.12"
readme = "README.md"
dependencies = [
    "wxpython>=4.2.1,<5",
    "python-rtmidi>=1.5.6,<2",
    "opencv-python-headless>=4.8.0.76,<5",
    "numpy>=1.26.0,<2",
    "mido>=1.3.0,<2",
    "pydantic>=2.6.4,<3",
    "certifi>=2024.2.2,<2025",
]

[project.urls]
Repository = "https://github.com/nai-kon/PlaySK-Piano-Roll-Reader"

[dependency-groups]
dev = [
    "cython>=3.0.2,<4",
    "pyinstaller==6.1.0",
    "pip-licenses>=4.3.3,<5",
    "pytest>=7.4.3,<8",
    "pytest-cov>=4.1.0,<5",
    "pytest-mock>=3.12.0,<4",
    "ruff>=0.11.8",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
lint.select = ["E", "F", "B", "I", "COM", "A", "UP", "Q", "SIM", "W"]
lint.ignore = [
    "E402",
    "E501",
    "SIM300",
    "UP008",
    "B905"
]
